# hazel-study

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  hazel.slnx
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/src/: SandboxApp.cpp
hazel/: CMakeLists.txt  hazel.vcxproj  hazel.vcxproj.filters
hazel/src/: Hazel.h  hzpch.h
hazel/src/Hazel/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
hazel/src/Hazel/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
